testdata/baselines/reference/submodule/conformance/importCallExpressionShouldNotGetParen.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'Promise'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
importCallExpressionShouldNotGetParen.ts(2,1): error TS2711: A dynamic import call returns a 'Promise'. Make sure you have a declaration for 'Promise' or include 'ES2015' in your '--lib' option.
importCallExpressionShouldNotGetParen.ts(2,43): error TS7006: Parameter 'bar' implicitly has an 'any' type.
importCallExpressionShouldNotGetParen.ts(6,1): error TS2711: A dynamic import call returns a 'Promise'. Make sure you have a declaration for 'Promise' or include 'ES2015' in your '--lib' option.
importCallExpressionShouldNotGetParen.ts(6,48): error TS7006: Parameter 'bar' implicitly has an 'any' type.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'Promise'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== importCallExpressionShouldNotGetParen.ts (4 errors) ====
    const localeName = "zh-CN";
    import(`./locales/${localeName}.js`).then(bar => {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2711: A dynamic import call returns a 'Promise'. Make sure you have a declaration for 'Promise' or include 'ES2015' in your '--lib' option.
                                              ~~~
!!! error TS7006: Parameter 'bar' implicitly has an 'any' type.
        let x = bar;
    });
    
    import("./locales/" + localeName + ".js").then(bar => {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2711: A dynamic import call returns a 'Promise'. Make sure you have a declaration for 'Promise' or include 'ES2015' in your '--lib' option.
                                                   ~~~
!!! error TS7006: Parameter 'bar' implicitly has an 'any' type.
        let x = bar;
    });
    